infra/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts-api
spec:
  selector:
    app: contacts-api
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
